--- a/content/big_picture.Rmd
+++ b/content/big_picture.Rmd
@@ -2,7 +2,7 @@
 title: Big Picture
 description:
 toc: true
-featuredImage: /images/NBA_finals_logo.png
+featuredImage: /images/NBA_Finals_logo.png
 featuredVideo:
 draft: false
 ---
