--- a/content/analysis.Rmd
+++ b/content/analysis.Rmd
@@ -3,7 +3,7 @@ title: Analysis
 description:
 toc: true
 featuredVideo:
-featuredImage: https://upload.wikimedia.org/wikipedia/commons/7/77/Pebbleswithquarzite.jpg
+featuredImage: /images/nba_analysis.png
 draft: false
 ---
 
