--- a/content/big_picture.Rmd
+++ b/content/big_picture.Rmd
@@ -36,7 +36,7 @@ You will
 
 ### Interactive
 
-You will also be required to make an interactive dashboard like [this one]( https://gwxyz.shinyapps.io/shinyx/).
+You will also be required to make an interactive dashboard like [this one]( https://gwxyz.shinyapps.io/shinyx/) and [that one](https://gwxyz.shinyapps.io/shiny_z/)
 
 
 Your Big Data page should include a link to an interactive dashboard. The dashboard should be created either using Shiny or FlexDashboard (or another tool with professor's approval). This interactive component should in some way support your thesis from your big picture page. Good interactives often provide both high-level understanding of the data while allowing a user to investigate specific scenarios, observations, subgroups, etc.
